Fix wrapping on logo title
- remove beta pill

--- a/client/src/components/J40Header/J40Header.module.scss
+++ b/client/src/components/J40Header/J40Header.module.scss
@@ -18,22 +18,8 @@
     @include u-display("flex");
     @include u-flex-direction("column");
     @include typeset("sans", 8, 3);
-  }
-
-  .title2BetaPill {
-    @include u-display("flex");
-  }
-
-  .betaPill {
-    @include u-display("inline-block");
-    @include u-bg("yellow-20v");
-    @include u-radius(1);
-    @include u-padding-left(2);
-    @include u-padding-right(2);
-    @include u-padding-top('05');
-    @include u-margin-left(1);
-    @include u-font("body", "2xs");
-    @include u-text('bold')
+    max-width: 270px;
+    min-width: 218px;
   }
 
   .navLinks {
